remove python calls

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,9 +22,9 @@ jobs:
         #pip install -r requirements.txt
         #pip install -r requirements-dev.txt
     - name: Build
-      run: python3 setup.py build
+      run: echo build
     - name: Install
-      run: python3 setup.py install
+      run: echo install
     - name: Test
       run: |
         #python3 -m unittest
